etl-api/tests/snapshots/destinations_pipelines__an_existing_destination_and_pipeline_can_be_updated-2.snap
---
source: etl-api/tests/destinations_pipelines.rs
expression: response.config
---
FullApiPipelineConfig {
    publication_name: "updated_publication",
    batch: Some(
        ApiBatchConfig {
            max_fill_ms: 10,
        },
    ),
    table_error_retry_delay_ms: Some(
        20000,
    ),
    max_table_sync_workers: Some(
        4,
    ),
}
