etl-api/tests/snapshots/destinations_pipelines__an_existing_iceberg_supabase_destination_and_pipeline_can_be_updated.snap
---
source: etl-api/tests/destinations_pipelines.rs
expression: response.config
---
Iceberg {
    config: Supabase {
        project_ref: "tsrqponmlkjihgfedcba",
        warehouse_name: "my-updated-warehouse",
        namespace: "my-updated-namespace",
        catalog_token: SerializableSecretString(
            SecretBox<str>([REDACTED]),
        ),
        s3_access_key_id: SerializableSecretString(
            SecretBox<str>([REDACTED]),
        ),
        s3_secret_access_key: SerializableSecretString(
            SecretBox<str>([REDACTED]),
        ),
        s3_region: "us-west-2",
    },
}
