etl-api/tests/snapshots/destinations_pipelines__bigquery_destination_and_pipeline_can_be_created-2.snap
---
source: etl-api/tests/destinations_pipelines.rs
expression: response.config
---
FullApiPipelineConfig {
    publication_name: "publication",
    temporary_replication_slot: false,
    batch: Some(
        ApiBatchConfig {
            max_size: Some(
                1000,
            ),
            max_fill_ms: Some(
                5,
            ),
        },
    ),
    table_error_retry_delay_ms: Some(
        10000,
    ),
    table_error_retry_max_attempts: Some(
        5,
    ),
    max_table_sync_workers: Some(
        2,
    ),
    log_level: Some(
        Info,
    ),
}
