etl-api/tests/snapshots/destinations_pipelines__bigquery_destination_and_pipeline_can_be_created.snap
---
source: etl-api/tests/destinations_pipelines.rs
expression: response.config
---
BigQuery {
    project_id: "project-id",
    dataset_id: "dataset-id",
    service_account_key: SerializableSecretString(
        SecretBox<str>([REDACTED]),
    ),
    max_staleness_mins: None,
    connection_pool_size: Some(
        1,
    ),
}
