etl-api/tests/snapshots/destinations_pipelines__destination_and_pipeline_can_be_created-2.snap
---
source: etl-api/tests/destinations_pipelines.rs
expression: response.config
---
FullApiPipelineConfig {
    publication_name: "publication",
    batch: Some(
        ApiBatchConfig {
            max_fill_ms: 5,
        },
    ),
    table_error_retry_delay_ms: Some(
        10000,
    ),
    max_table_sync_workers: Some(
        2,
    ),
}
