etl-api/tests/snapshots/destinations_pipelines__iceberg_supabase_destination_and_pipeline_can_be_created.snap
---
source: etl-api/tests/destinations_pipelines.rs
expression: response.config
---
Iceberg {
    config: Supabase {
        project_ref: "abcdefghijklmnopqrst",
        warehouse_name: "my-warehouse",
        namespace: "my-namespace",
        catalog_token: SerializableSecretString(
            SecretBox<str>([REDACTED]),
        ),
        s3_access_key_id: "9156667efc2c70d89af6588da86d2924",
        s3_secret_access_key: SerializableSecretString(
            SecretBox<str>([REDACTED]),
        ),
        s3_region: "ap-southeast-1",
    },
}
